--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,29 @@
 #content {
-  width: 622px;
+	position: relative;
+	height: 618px;
+  width: 800px;
   padding: 0;
   margin: auto;
   display: block;
+  z-index: 0;
+}
+
+canvas {
+	position: absolute;
+	left: 31px;
+	top: 32px;
 }
 
 #layer1 {
-  background-image: url("../images/white_house.jpg");
+	background-image: url("../images/white_house.jpg");
+	z-index: 1;
+}
+
+#layer2 {
+	z-index: 2;
+}
+
+#tv-img {
+	max-height: 100%;
+	max-width: 100%;
 }
